--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link
+    <link
       href="node_modules/bootstrap/dist/css/bootstrap.css"
       rel="stylesheet"
-    /> -->
+    />
     <link href="./style.css" rel="stylesheet" />
 
     <title>FASE 2022</title>
